# meilisearch-test

./: Cargo.toml  build.rs
src/: klite.rs  main.rs  searcher.proto  wiki.rs
