[package]
name = "inserter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.19"
reqwest = "0.11.8"
serde = "1.0.132"
serde_json = "1.0.73"
tokio = { version = "1.15.0", features = ["full"] }
