[package]
name = "inserter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
fake = { version = "2.4.3", features = ["derive"] }
futures = "0.3.19"
mongodb = "2.1.0"
prost = "0.9.0"
prost-types = "0.9.0"
rand = "0.8.4"
reqwest = "0.11.8"
serde = "1.0.132"
serde_json = "1.0.73"
tokio = { version = "1.15.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.4"

[build-dependencies]
prost-build = "0.9.0"
